Resolves: fdo#53460 crashes after casting SwTxtFrm to unrelated SwLayoutFrm

We still can't use ctrl+up to shrink the height of a row that has a table in
it, but it doesn't crash anymore.

This code presumably isn't truly table-in-table aware and should somehow step
"over" the embedded table and not "into" it, which is what I guess it is doing
here.

Change-Id: I0e4c757c75438a89eb7721de32990f2f21c1ad8b